<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.welcome"


>

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:src="@drawable/welcom_background"
               android:scaleType="fitXY"

               android:forceHasOverlappingRendering="true"
               android:focusable="true"


    />

    <View android:layout_width="match_parent" android:layout_height="match_parent"
          android:foreground="@drawable/gradient_background"/>
    <Button
            android:id="@+id/skip_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/skip_text_btn"
            android:textSize="14sp"
            android:background="@drawable/cornar"
            android:textColor="@color/primar_color"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:layout_marginRight="29dp"

    />
    <LinearLayout
            android:id="@+id/food_hub"
            android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="181dp"
                  android:layout_marginLeft="30dp"

                  >
        <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Welcome"
                android:fontFamily="sans-serif-black"
                android:textSize="45sp"
                android:textColor="@color/another_black"
        />
        <TextView
                android:id="@+id/foodhub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/FoodHub"
                android:textSize="45sp"
                android:textColor="@color/primar_color"
        />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/favourite"
                  android:textColor="@color/kohly"
                  android:textSize="18sp"
                  android:layout_marginTop="10dp"

                  />



    </LinearLayout>





    <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="480dp"
            android:layout_centerHorizontal="true"
            >
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      >
            <View

                    android:id="@+id/first_line"
                    android:layout_width="89dp" android:layout_height="1dp"
                  android:background="@color/white"
                  android:layout_marginTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signsign_in_with_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    />
            <View

                    android:id="@+id/Second_line"
                    android:layout_width="89dp" android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"/>


            
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
            <Button android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/facebook_logo"
                    android:background="@drawable/cornar"
                    android:paddingStart="10dp"
                    android:text="@string/facebook_text"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="13sp"
                    android:layout_weight="1"


                    />
            <Button android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/google_logo"
                    android:background="@drawable/cornar"
                    android:paddingStart="10dp"
                    android:text="@string/google_text"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="13sp"
                    android:layout_marginLeft="15dp"
                    android:paddingEnd="20dp"


            />

        </LinearLayout>
        
        
        <Button
                android:id="@+id/start_with_emailorphone"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/email_and_phone_style"
                android:layout_marginTop="24dp"
                android:text="@string/startwithemail"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
        />




<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
              >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Already_have_Acount"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"

            />
    <TextView
            android:id="@+id/SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signin_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="5dp"


    />
</LinearLayout>
        


        
    </LinearLayout>






</RelativeLayout>