<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Login">



    <ImageView
            android:id="@+id/first_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/firstcircle"/>

    <ImageView
            android:id="@+id/second_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/secondcircel"/>

    <ImageView
            android:id="@+id/third_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thirdcircle"
            android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/back_arrow"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/back_arrow_style"
        android:drawableTop="@drawable/back_arrow"
        android:padding="7dp"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="27dp"
        />


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginTop="170dp"
                  android:layout_centerHorizontal="true"
    >
        <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="36.41sp"
                android:fontFamily="sans-serif-medium"/>



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hit_fullName"
                android:textColor="@color/hint_color"
                android:textSize="16sp"
                android:layout_marginTop="14dp"
        />
        <EditText android:layout_width="324dp"
                  android:layout_height="65dp"
                  android:background="@drawable/edit_text_style"
                  android:layout_marginTop="12dp"

        />



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hit_Password"
                android:textColor="@color/hint_color"
                android:textSize="16sp"
                android:layout_marginTop="14dp"
        />
        <EditText android:layout_width="324dp"
                  android:layout_height="65dp"
                  android:background="@drawable/edit_text_style"
                  android:layout_marginTop="12dp"

        />


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="Forgot password?"
                  android:textColor="@color/primar_color"
                  android:layout_gravity="center_horizontal"
                  android:textSize="14sp"
                  android:layout_marginTop="10dp"/>

        <Button android:layout_width="248dp" android:layout_height="60dp"
                android:background="@drawable/onbording_button_style"
                android:layout_gravity="center_horizontal"
                android:text="@string/Sign_Up_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="25dp"/>



        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dont_have_an_account"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"

            />
            <TextView
                    android:id="@+id/SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sign_Up_text"
                    android:textSize="14sp"
                    android:textColor="@color/primar_color"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="5dp"


            />
        </LinearLayout>



        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="20dp"
                      android:layout_gravity="center_horizontal"
        >
            <View

                    android:id="@+id/first_line"
                    android:layout_width="89dp" android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signsign_in_with_text"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/black"
            />
            <View

                    android:id="@+id/Second_line"
                    android:layout_width="89dp" android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>



        </LinearLayout>



        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"


        >
            <Button android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/facebook_logo"
                    android:background="@drawable/cornar"
                    android:paddingStart="10dp"
                    android:text="@string/facebook_text"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="13sp"
                    android:layout_weight="1"



            />
            <Button android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/google_logo"
                    android:background="@drawable/cornar"
                    android:paddingStart="10dp"
                    android:text="@string/google_text"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="13sp"
                    android:layout_marginLeft="15dp"
                    android:paddingEnd="20dp"


            />

        </LinearLayout>



    </LinearLayout>




</RelativeLayout>