<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.vefification_code">

    <ImageView
            android:id="@+id/first_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/firstcircle"/>

    <ImageView
            android:id="@+id/second_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/secondcircel"/>

    <ImageView
            android:id="@+id/third_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thirdcircle"
            android:layout_alignParentEnd="true"/>

    <Button
            android:id="@+id/back_arrow_in_vcode"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/back_arrow_style"
            android:drawableTop="@drawable/back_arrow"
            android:padding="7dp"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="27dp"
    />



    <TextView
            android:id="@+id/vcod_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vefification_Code_Text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="36.41sp"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="27dp"/>
    <TextView
            android:id="@+id/id_description_vcode"
            android:layout_width="289dp"
              android:layout_height="wrap_content"
              android:layout_below="@id/vcod_text"
              android:text="@string/description_for_vcode"
              android:layout_marginLeft="27dp"
              android:layout_marginTop="7dp"
              android:textColor="@color/hint_color"
              />


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="27dp"
                  android:layout_below="@id/id_description_vcode"
                  android:orientation="vertical"
                  android:layout_marginTop="27dp">



    <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
        <EditText
                android:id="@+id/edit_vcode_1"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:textColor="@color/primar_color"
                android:maxLength="1"
                android:textSize="27.2sp"
                android:textStyle="bold"
                android:paddingStart="25dp"



        />


        <EditText
                android:id="@+id/edit_vcode_2"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:textColor="@color/primar_color"
                android:maxLength="1"
                android:textSize="27.2sp"
                android:textStyle="bold"
                android:paddingStart="25dp"
                android:layout_marginLeft="17dp"



        />

        <EditText
                android:id="@+id/edit_vcode_3"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:textColor="@color/primar_color"
                android:maxLength="1"
                android:textSize="27.2sp"
                android:textStyle="bold"
                android:paddingStart="25dp"
                android:layout_marginLeft="17dp"


        />

        <EditText
                android:id="@+id/edit_vcode_4"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:textColor="@color/primar_color"
                android:maxLength="1"
                android:textSize="27.2sp"
                android:textStyle="bold"
                android:paddingStart="25dp"
                android:layout_marginLeft="17dp"


        />



    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="27dp"

                  >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Idontrecevie"
                android:textSize="16sp"
                android:textColor="@color/I_dont_recevie_color"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Please_send_text"
                android:textSize="16sp"
                android:textColor="@color/primar_color"/>

    </LinearLayout>

    </LinearLayout>


</RelativeLayout>